fixed spacing for navbar. updated more styling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Playfair Display', 'Oswald', 'Segoe UI', 'Dancing Script', 'Roboto', 'Oxygen',
+  font-family: 'Playfair Display', 'Oswald', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Dancing Script', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
